--- a/nodes/92-flowhub-diff.html
+++ b/nodes/92-flowhub-diff.html
@@ -51,11 +51,13 @@
 
     function createDiff(ndeV1, ndeV2) {
       var diffDetails = [];
+      var changedAttrs = [];
 
       Object.keys(ndeV2).forEach(function (nme) {
         if ( Object.keys(ndeV1).indexOf(nme) < 0 ) {
           var txt = typeof ndeV2[nme] == "object" ? JSON.stringify(ndeV2[nme]) : ndeV2[nme];
           diffDetails.push("<tr class='dv-removed'><th>" + nme + attrDesc(nme) + "</th><td><i>MISSING</i></td><td><code>" + escapeHtml(txt) + "</code></td></tr>")
+          changedAttrs.push(nme)
         }
       });
 
@@ -63,6 +65,7 @@
         if (Object.keys(ndeV2).indexOf(nme) < 0) {
           var txt = typeof ndeV1[nme] == "object" ? JSON.stringify(ndeV1[nme]) : ndeV1[nme];
           diffDetails.push("<tr class='dv-added'><th>" + nme + attrDesc(nme) + "</th><td><code>" + escapeHtml(txt) +"</code></td><td><i>ADDED</i></td></tr>")
+          changedAttrs.push(nme)
         }
       });
 
@@ -71,6 +74,7 @@
           if ( JSON.stringify(ndeV1[nme]) !== JSON.stringify(ndeV2[nme]) ) {
             let span = null;
             let diff = undefined;
+            changedAttrs.push(nme)
 
             try {
               diff = Diff.diffLines(ndeV2[nme], ndeV1[nme])
@@ -112,12 +116,13 @@
           } else {
             diffDetails.push("<tr><th>" + nme + "</th><td><code>" + escapeHtml(ndeV1[nme]) + "</code></td><td><code>" + escapeHtml(ndeV2[nme]) + "</code></td></tr>")
           }
-        } else {
-            diffDetails.push("<tr><th>" + nme + "</th><td><code>" + escapeHtml(ndeV1[nme]) + "</code></td><td><code>SURE NOT HAPPEN</code></td></tr>")
         }
       });
       
-      return diffDetails.join("")
+      return { 
+        html: diffDetails.join(""),
+        visualOnly: changedAttrs.filter( d => d != 'x' && d != 'w' && d != 'y' && d != 'h').length == 0
+      }
     }
 
 
@@ -186,7 +191,7 @@
                 label:    nde.oldObj.name || nde.oldObj.type,
                 icon:     "fa fa-times",
                 class:    "",
-                diffcontent: createDiff({}, nde.oldObj),
+                diffcontent: createDiff({}, nde.oldObj).html,
                 sublabel: nde.type,
                 selected: false,
                 checkbox: false,
@@ -202,7 +207,7 @@
                 label:    nde.newObj.name || nde.newObj.type,
                 icon:     "fa fa-check",
                 class:    "",
-                diffcontent: createDiff(nde.newObj, {}),
+                diffcontent: createDiff(nde.newObj, {}).html,
                 sublabel: nde.type,
                 selected: false,
                 checkbox: false,
@@ -218,8 +223,8 @@
                 label:    nde.oldObj.name || nde.oldObj.type,
                 icon:     "fa fa-times",
                 class:    "",
-                diffcontent: createDiff(nde.newObj, nde.oldObj),
-                sublabel: nde.oldObj.type + " - " + nde.type,
+                diffcontent: createDiff(nde.newObj, nde.oldObj).html,
+                sublabel: nde.type + " - " + nde.oldObj.type,
                 selected: false,
                 checkbox: false,
                 children: undefined
@@ -246,12 +251,13 @@
               label = n.type;
             }
 
+            var diffContent = createDiff(nde.newObj, nde.oldObj);
             nodeItemMap[n.id] = {
               node:     n,
               label:    label,
-              icon:     n.d ? "fa fa-eye-slash" : "fa fa-eye",
+              icon:     "fa " + (diffContent.visualOnly ? 'fa-eye' : 'fa-pencil'),
               class:    "",
-              diffcontent: createDiff(nde.newObj, nde.oldObj),
+              diffcontent: diffContent.html,
               sublabel: nde.type,
               selected: false,
               checkbox: false,
@@ -271,7 +277,9 @@
             $('#node-input-flowhubdiff-target-container-div').html("No changes")
           } else {
             node.dirList.treeList('empty');
-            node.dirList.treeList('data',items);
+
+
+            node.dirList.treeList('data',items.sort( (a,b) => a.sublabel > b.sublabel ));
           }
         },
 
