--- a/nodes/92-flowhub-diff.html
+++ b/nodes/92-flowhub-diff.html
@@ -425,7 +425,7 @@
 .diff-viewer{
   overflow:scroll;
   background-color:rgb(244, 244, 244);
-  border: 2px solid #000;
+  border: 1px solid rgb(85,85,85);
   height:80vh;
   padding: 20px;
   max-width: 90vw;
