added node type to node diff

--- a/nodes/92-flowhub-diff.html
+++ b/nodes/92-flowhub-diff.html
@@ -340,7 +340,7 @@
             $('#node-input-flowhubdiff-target-container-div').html("No changes")
           } else {
             node.dirList.treeList('empty');
-            node.dirList.treeList('data',items.sort( (a,b) => a.sublabel > b.sublabel ));
+            node.dirList.treeList('data',items.sort( (a,b) => a.icon > b.icon ));
           }
         },
 
