added slider to the image and new icon names

--- a/nodes/91-flowhub-push.html
+++ b/nodes/91-flowhub-push.html
@@ -83,7 +83,7 @@
 
     RED.nodes.registerType('FlowHubPush',{
       color: '#44eeff',
-      icon: "icons/push.svg",
+      icon: "flowhubpush.svg",
       category: 'flowhub',
       defaults: {
         apiToken: {
