--- a/nodes/90-flowhub-pull.html
+++ b/nodes/90-flowhub-pull.html
@@ -49,7 +49,7 @@
 
    RED.nodes.registerType('FlowHubPull',{
      color: '#44eeff',
-     icon: "icons/pull.svg",
+     icon: "flowhubpull.svg",
      category: 'flowhub',
      defaults: {
        name: { value: ""},
