FlowHubPush now also a sidebar node

--- a/nodes/flowhubdiffcfg.html
+++ b/nodes/flowhubdiffcfg.html
@@ -13,5 +13,9 @@
 <script type="text/x-red" data-template-name="FlowHubDiffCfg">
    <p>Compare the local version of a flow with the latest version at FlowHub.org
 </p>
-   This node can be used to compare flows that have been modified locally with those stored on FlowHub. Difference are highlighted in the property panel. Nodes marked with <i class="fa fa-eye"></i> are changes that are only visual, changes marked with a <i class="fa fa-pencil"></i> have textual changes.
+   This node can be used to compare flows that have been modified<br> 
+   locally with those stored on FlowHub. Difference are highlighted <br>
+   in the property panel. Nodes marked with <i class="fa fa-eye"></i> are<br>
+    changes that are only visual, changes marked with a <i class="fa fa-pencil"></i> have<br>
+   textual changes.
 </script>
