--- a/plugins/flowhubpush.html
+++ b/plugins/flowhubpush.html
@@ -225,6 +225,14 @@
 <script type="text/x-red" data-template-name="FlowHubPush">
 
 <div class="form-row" style="margin-top: 30px; margin-left: 10px;">
+   <button id="node-input-flowhubpush-push-btn"
+      class="red-ui-button">Push Flow-Tab to FlowHub</button>
+   <a id="flowhubpush-view-flow-link" 
+      style="color: blue; display: none; margin-left: 80px;" 
+      target="_blank" href="">View Flow <i class="fa fa-external-link"></i></a>
+</div>
+
+<div class="form-row" style="margin-left: 10px; margin-top: 20px;">
    <label for="node-input-flowhubpush-apiToken">
       <i class="fa fa-tag"></i>
       FlowHub API Token
@@ -279,17 +287,4 @@
       and provides no warranty in case of failure nor guarantee of success.
 </div>
 
-<div class="form-row">
-   <hr />
-</div>
-
-<div class="form-row" style="margin-left: 10px;">
-   <button id="node-input-flowhubpush-push-btn"
-      class="red-ui-button">Push Flow-Tab to FlowHub</button>
-</div>
-
-<div class="form-row" style="margin-left: 10px;">
-   <a id="flowhubpush-view-flow-link" style="color: blue; display: none;" target="_blank" href="">View Flow
-      <i class="fa fa-external-link"></i></a>
-</div>
 </script>
