--- a/plugins/flowhubdiff.html
+++ b/plugins/flowhubdiff.html
@@ -136,12 +136,13 @@
 
 <!-- The html for the right sidebar plugin screen -->
 <script type="text/x-red" data-template-name="FlowHubDiff">
-   <div class="form-row" style="margin-left: 15px; margin-top: 30px;">
+   <div class="form-row" style="margin-left: 10px; margin-top: 30px;">
       <button id="node-input-flowhubdiff-compare-btn"
                class="red-ui-button">Compare to Remote Flow</button>
    </div>
 
-   <div class="form-row node-input-target-row node-input-target-list-row" style="min-height: 100px">
+   <div class="form-row node-input-target-row node-input-target-list-row" 
+        style="min-height: 100px; margin-left: 10px; margin-right: 15px;">
       <div style="margin-right: 15px; margin-bottom: 5px; width: 35%; padding-left: 60%;">
          <input type="text" id="node-input-flowhubdiff-target-filter" style="display: none;">
       </div>
@@ -149,11 +150,11 @@
       <div id="node-input-flowhubdiff-target-container-div" style="min-height: 100px"></div>
    </div>
 
-   <div class="form-row" style="position: relative; min-height: 300px">
+   <div class="form-row" style="min-height: 300px; margin-left: 10px; margin-right: 15px;">
       <div id="node-input-flowhubdiff-svgcontainer"></div>
    </div>
 
-   <div class="form-row" style="position: relative; min-height: 100px">
+   <div class="form-row" style="min-height: 100px; margin-left: 10px; margin-right: 15px;">
       <div id="node-input-flowhubdiff-diffcontainer" class="diff-viewer"></div>
    </div>
 </script>
