introduced double click to open editor tray

--- a/nodes/90-flowhub-pull.html
+++ b/nodes/90-flowhub-pull.html
@@ -241,7 +241,7 @@
                 class="red-ui-button">Import Flow</button>
         <input type="text" id="node-input-flowname" style="display: none;">
 
-        <a id="flowhubpull-view-flow-link" style="color: blue; display: none; padding-left: 80px;" 
+        <a id="flowhubpull-view-flow-link" style="color: blue; display: none; margin-left: 80px;" 
            target="_blank" href="">View Flow <i class="fa fa-external-link"></i></a>
     </div>
 
