added pull sidebar tab, added comment to push and removed API token option

--- a/nodes/flowhub-pull.html
+++ b/nodes/flowhub-pull.html
@@ -259,7 +259,7 @@
 
     <div class="form-row node-input-target-row">
         <button id="node-input-refresh-list-but"
-                class="red-ui-button"><i class="fa fa-shower"></i> Refresh</button>
+                class="red-ui-button"><i class="fa fa-refresh"></i> Refresh Flow List</button>
     </div>
 
     <div class="form-row node-input-target-row node-input-target-list-row"
