--- a/nodes/flowhubcfg.html
+++ b/nodes/flowhubcfg.html
@@ -8,6 +8,10 @@
         apiTokenType: {   value: "env",   },
         fullname: { value: "" },
         email: { value: "" },
+        flowid: { value: "" },
+        flowrevision: { value: "" },
+        notab: { value: false },
+        pushcomment: { value: "" },
       },
       label: 'FlowHubCfg',
   });
