--- a/plugins/flowhub.html
+++ b/plugins/flowhub.html
@@ -113,7 +113,7 @@
       // Add first tab, compare
       tabs.addTab({
             id: 'func-flowhub-tab-compare',
-            iconClass: 'fa fa-question',
+            iconClass: 'fa fa-clone',
             label: 'Compare'
       });
       
