--- a/nodes/flowhub-pull.html
+++ b/nodes/flowhub-pull.html
@@ -1,51 +1,7 @@
 <script type="text/javascript">
  (function(){
-   function flowHubUpdateFlows(cb=null) {
-     $.get(
-       "https://api.flowhub.org/v1/flows?cb=" + new Date().getTime()
-     ).done( (resp) => {
-       var treeListItems = [];
 
-       Object.keys( resp.data ).forEach( function(key) {
-         treeListItems.push( {
-           label:    resp.data[key].name,
-           icon:     "fa fa-eye",
-           flowid:   key,
-           sublabel: key,
-           selected: $('#node-input-flowid').val() == key,
-           checkbox: false,
-           children: undefined
-         });
-       });
-
-       if ( cb ) {
-         treeListItems.sort( (a,b) => {
-           return a.label < b.label ? -1 : 1;
-         });
-
-         cb(treeListItems)
-       };
-     }).fail( (e) => {
-       var msg = "";
-
-       if ( e.state() == "rejected" ) {
-         msg = "<p>Failed to retrieve FlowHub catalogue, request blocked.</p>"+
-               "<p>AdBlocker or uBlock might have prevented request.</p>"+
-               "<p>Please check browser console for more details.</p>";
-       } else {
-         msg = "<p>Failed to retrieve FlowHub catalogue.</p>" +
-               "<p>Check browser console for more details.</p>";
-       }
-
-       console.warn("Error loading https://api.flowhub.org/v1/flows:",e);
-       RED.notify(msg, {
-           type: "error",
-           id: "FlowHubPull",
-           timeout: 4000
-         }
-       );
-     });
-   };
+   function flowHubPullUpdateFlows(e=null,o=null){$.get({url:"https://api.flowhub.org/v1/flows?cb="+(new Date).getTime(),headers:{"X-FHB-TOKEN":o}}).done(o=>{var t=[];Object.keys(o.data).forEach(function(e){t.push({label:o.data[e].name,icon:"fa "+(RED.nodes.workspace(e)?"fa-check-circle-o":""),flowid:e,sublabel:e,selected:$("#node-input-flowhubpull-flowid").val()==e,checkbox:!1,children:void 0})}),e&&(t.sort((e,o)=>e.label<o.label?-1:1),e(t))}).fail(e=>{var o="",o="rejected"==e.state()?"<p>Failed to retrieve FlowHub catalogue, request blocked.</p><p>AdBlocker or uBlock might have prevented request.</p><p>Please check browser console for more details.</p>":"<p>Failed to retrieve FlowHub catalogue.</p><p>Check browser console for more details.</p>";console.warn("Error loading https://api.flowhub.org/v1/flows:",e),RED.notify(o,{type:"error",id:"FlowHubPull",timeout:4e3})})}function obtainConfigNode(){let o=[];return RED.nodes.eachConfig(function(e){"FlowHubCfg"===e.type&&o.push(e)}),o[0]}function obtainFhbToken(e,i){$.ajax({url:"FlowHubToken",type:"POST",contentType:"application/json; charset=utf-8",data:JSON.stringify({cfgnode:e}),success:function(e){i(e.token)},error:function(e,o,t){i("")}})}function doFlowImport(t,e){$.get({url:"https://api.flowhub.org/v1/flows/"+$("#node-input-flowhubpull-flowid").val()+"?cb="+(new Date).getTime()+"&v="+$("#node-input-flowhubpull-flowrevision").val(),headers:{"X-FHB-TOKEN":e}},function(o,e){if(!Array.isArray(o))return RED.notify("Access Denied.",{type:"error",timeout:3e3});RED.clipboard.import(),setTimeout(()=>{var e=o;t&&(e=o.filter(function(e){return"tab"!=e.type})),$("#red-ui-clipboard-dialog-import-text").val(JSON.stringify(e)).trigger("paste")},300)})}function checkForDuplication(e){$.get({url:"https://api.flowhub.org/v1/flows/"+$("#node-input-flowhubpull-flowid").val()+"?cb="+(new Date).getTime()+"&v="+$("#node-input-flowhubpull-flowrevision").val(),headers:{"X-FHB-TOKEN":e}},function(e,o){let t=[];if(!Array.isArray(e))return RED.notify("Access Denied.","warning");if(e.forEach((e,o)=>{"tab"==e.type?RED.nodes.workspace(e.id)&&t.push(e):"junction"==e.type?RED.nodes.junction(e.id)&&t.push(e):"group"==e.type?RED.nodes.group(e.id)&&t.push(e):"subflow"==e.type?RED.nodes.subflow(e.id)&&t.push(e):RED.nodes.node(e.id)&&t.push(e)}),0==t.length){RED.notify("Found no duplication.","success");try{$("#node-input-flowhubpull-sb-duplication-container-div").treeList("empty")}catch(e){}}else{RED.notify("Found "+t.length+" items of duplication","warning");try{$("#node-input-flowhubpull-sb-duplication-container-div").treeList("empty")}catch(e){$("#node-input-flowhubpull-sb-duplication-container-div").css({width:"100%",height:"calc(100%)"}).treeList({multi:!1}).on("treelistitemmouseover",function(e,o){}).on("treelistitemmouseout",function(e,o){}).on("treelistselect",function(e,o){o.node&&(RED.workspaces.show(o.node.z,!1,!1,!0),RED.view.reveal(o.node.id,!0),RED.view.redraw())}).on("treelistconfirm",function(e,o){var t;o.node&&(t=o.node.id,setTimeout(()=>{var e=RED.nodes.node(t);e&&(RED.view.reveal(e.id),RED.view.select(e.id),RED.editor.edit(e)),t==RED.workspaces.active()&&RED.workspaces.edit()},50))})}t=t.map(e=>({node:e,label:e.id,sublabel:e.type,selected:!1,checkbox:!1})),$("#node-input-flowhubpull-sb-duplication-container-div").treeList("data",t)}})}
 
    RED.nodes.registerType('FlowHubPull',{
      color: '#44eeff',
@@ -105,8 +61,6 @@
          }
        });
 
-       var items = [];
-
        if ( this.flowid ) {
          setTimeout( () => {
            $('#flowhubpull-view-flow-link').attr(
@@ -144,26 +98,22 @@
          }
        });
 
-       flowHubUpdateFlows((treeListItems) => {
-         items = treeListItems;
-         dirList.treeList('data', treeListItems);
-       });
+       obtainFhbToken(obtainConfigNode(), (token) => {
+        flowHubPullUpdateFlows( (lst) => { dirList.treeList('data', lst) }, token);
+       })
 
        $('#node-input-refresh-list-but').on('click', function(e) {
          e.preventDefault();
 
          setTimeout( () => {
-           flowHubUpdateFlows((treeListItems) => {
-             items = treeListItems;
-             dirList.treeList('data', treeListItems);
-           });
+           obtainFhbToken(obtainConfigNode(), (token) => {
+            flowHubPullUpdateFlows( (lst) => { dirList.treeList('data', lst) }, token);
+           })
          }, 300);
        });
 
        $("#node-input-import-flow-but").on("click", function(e) {
          if ( e ) { e.preventDefault(); }
-
-         var notab = $('#node-input-notab').prop('checked');
 
          if ( $('#node-input-flowid').val().trim() == "" ||
               !$('#node-input-flowid').val() ) {
@@ -174,26 +124,10 @@
 
          $('#node-dialog-ok').trigger('click')
 
-         $.get( "https://api.flowhub.org/v1/flows/" +
-                $('#node-input-flowid').val() +
-                "?cb=" + new Date().getTime() + "&v=" + 
-                $('#node-input-flowrevision').val(), function(e,d) {
-                  RED.clipboard.import();
-
-                  setTimeout( () => {
-                    var content = e;
-
-                    if ( notab ) {
-                      content = e.filter(function(o) {
-                        return o.type != "tab"
-                      });
-                    }
-
-                    $('#red-ui-clipboard-dialog-import-text').val(
-                      JSON.stringify(content)
-                    ).trigger("paste");
-                  }, 300);
-                });
+         let notab = $('#node-input-notab').prop('checked');
+         obtainFhbToken(obtainConfigNode(), (token) => {
+           doFlowImport(notab, token)
+         })
        });
 
        if ( this.notab ) {
