flow pull provides nodedetails

--- a/nodes/flowhubcfg.html
+++ b/nodes/flowhubcfg.html
@@ -12,6 +12,11 @@
         flowrevision: { value: "" },
         notab: { value: false },
         pushcomment: { value: "" },
+        tokens: { value: [{
+          name: "FlowHub Token",
+          type: "env",
+          val: "FLOWHUB_API_TOKEN"
+        }]}
       },
       label: 'FlowHubCfg',
   });
