check for flow existence before pushing

--- a/nodes/flowhubcfg.html
+++ b/nodes/flowhubcfg.html
@@ -5,13 +5,14 @@
       hasUsers: false,
       defaults: {
         apiToken: { value: "FLOWHUB_API_TOKEN" },      
-        apiTokenType: {   value: "env",   },
+        apiTokenType: { value: "env" },
         fullname: { value: "" },
         email: { value: "" },
         flowid: { value: "" },
         flowrevision: { value: "" },
         notab: { value: false },
         pushcomment: { value: "" },
+        pushnewflows: { value: false },
         tokens: { value: [{
           name: "FlowHub Token",
           type: "env",
