initial implementation for supporting flow revisions

--- a/nodes/flowhubcfg.html
+++ b/nodes/flowhubcfg.html
@@ -17,7 +17,8 @@
           name: "FlowHub Token",
           type: "env",
           val: "FLOWHUB_API_TOKEN"
-        }]}
+        }]},
+        flowrevisions: { value: {} }
       },
       label: 'FlowHubCfg',
   });
