--- a/plugins/flowhub.html
+++ b/plugins/flowhub.html
@@ -404,6 +404,13 @@
         checkToken($('#node-input-flowhubpush-new-token-field').val())
       })
 
+      $('#node-input-flowhubpush-clear-token-btn').on('click', e => {
+        if ( e ) { e.preventDefault() }      
+        $('#node-input-flowhubpush-new-token-name-field').val("")
+        $('#node-input-flowhubpush-new-token-field').val("")
+        $('#node-input-flowhubpush-new-token-field').trigger('change')
+      })
+      
       $('#node-input-flowhubpush-add-token-btn').on('click', e => {
         if ( e ) { e.preventDefault() }
 
@@ -681,9 +688,11 @@
             </div>
 
             <div class="form-row" style="margin-left: 10px;">
-               <input id="node-input-flowhubpush-new-token-name-field" placeholder="Token Name" style="width: 300px;">
+               <input id="node-input-flowhubpush-new-token-name-field" placeholder="Token Name" style="width: 250px;">
                <button id="node-input-flowhubpush-add-token-btn"
-                                    class="red-ui-button"><i class="fa fa-plus"></i> Add Token</button>
+                                    class="red-ui-button"><i class="fa fa-plus"></i> Add</button>
+               <button id="node-input-flowhubpush-clear-token-btn"
+                                    class="red-ui-button"><i class="fa fa-times"></i> Clear</button>
             </div>
 
             <div class="form-row" style="margin-left: 10px;">
