--- a/plugins/flowhub.html
+++ b/plugins/flowhub.html
@@ -593,7 +593,7 @@
    <!--func-flowhub-tab-compare#-->
    <div id="func-flowhub-tab-compare" style="display:none; height: 87vh;">
       <div>
-         <div class="form-row" style="margin-left: 10px; height: 5vh;">
+         <div style="margin-left: 10px; height: 5vh;">
             <button id="node-input-flowhubdiff-compare-btn"
                class="red-ui-button"><i class="fa fa-balance-scale"></i> Compare</button>
             <button id="node-input-flowhubdiff-next-change-btn"
@@ -603,7 +603,7 @@
                target="_blank" href="">Webiliser <i class="fa fa-external-link"></i></a>
          </div>
 
-         <div class="form-row" style="margin-left: 10px; margin-right: 15px; height: 15vh; min-height: 5vh;">
+         <div style="margin-left: 10px; margin-right: 15px; height: 15vh; min-height: 5vh;">
             <div style="margin-right: 15px; width: 35%; float: right; margin-top: -38px;">
                <input type="text" id="node-input-flowhubdiff-target-filter" style="display: none;">
             </div>
@@ -611,7 +611,7 @@
             <div id="node-input-flowhubdiff-target-container-div"></div>
          </div>
 
-         <div class="form-row" style="margin-top: 3vh; height: 25vh; margin-left: 10px; margin-right: 15px;">
+         <div style="height: 25vh; margin-left: 10px; margin-right: 15px;">
             <div id="node-input-flowhubdiff-svgcontainer"></div>
          </div>
       </div>
